--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,11 @@ header nav ul li a {
     font-weight: 500;
 
 }
-
 .active-nav:after {
     color: #10c9c3;
 }
          
-header nav ul li a:hover {
+header nav ul li a:hover, header nav ul li.active-nav a {
     color: #10c9c3;
 }
 
@@ -144,29 +143,28 @@ text-align: center;
  margin-right: auto;
  margin-bottom: 101px;
 }
-/* 3 progress bars */
-.prog-bar-bg{
-  background-color: #e9e9e9;
-    }
-.prog-bar-mv {
-    max-width: 1114px;
+
+ .prog-bar-bg-right {
+     background-color: #e9e9e9;
+     width: 50%;
+ }
+
+.prog-bar-bg-left{
+    background-color: #f8f9f9;
+    width: 50%;
+
+    padding-top: 169px;
+}
+.prog-mv {
+    max-width: 500px;
     margin: auto;
 }
 
-.prog-bar-left{
-    background-color: #f8f9f9;
-    max-width: 500px;
-    width: 100%;
-    padding-top: 169px;
-    float: left;
-}
 
-.prog-bar-bg:after {
-    clear: both;
-    content: "";
-    display: block;
+.prog-section {
+    display: flex;
+    height: 570px;
 }
-
 .pr-skills{
  font-size: 30px;
  padding-bottom: 37px;
@@ -174,21 +172,18 @@ text-align: center;
     font-weight: 500;
 }
 
-.prog-bar-left p{
- font-size: 12px;
+.prog-bar-bg-left p{
+    font-size: 12px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    text-transform: uppercase;
+    padding-bottom: 20px;
 }
-
-
 
 .b1-aqua{
     height: 5px;
-    max-width: 505px;
     background-color: #d8d8d8;
     margin-bottom: 40px;
-    text-transform: uppercase;
-    font-size: 12px;
 }
 
 .b1-aqua:before {
@@ -199,13 +194,14 @@ text-align: center;
     display: block;
 }
 
-.b2-aqua{
+.b2-aqua {
     height: 5px;
-    max-width: 505px;
     background-color: #d8d8d8;
     margin-bottom: 40px;
     text-transform: uppercase;
     font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
 
 .b2-aqua:before {
@@ -218,11 +214,12 @@ text-align: center;
 
 .b3-aqua{
     height: 5px;
-    max-width: 505px;
     background-color: #d8d8d8;
     margin-bottom: 165px;
     text-transform: uppercase;
     font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
 
 .b3-aqua:before {
@@ -304,7 +301,7 @@ li img{
 .gallery-1:after {
     content: "";
     clear: both;
-    display: inline-block;
+    display: block;
 }
 .gallery-1 img{
     opacity: 0;
@@ -336,7 +333,7 @@ li img{
 .gallery-2:after {
     content: "";
     clear: both;
-    display: inline-block;
+    display: block;
 }
 .gallery-2 img{
     opacity: 0;
@@ -431,27 +428,35 @@ li img{
 }
 
 .services-mw{
-    max-width: 1114px;
+    max-width: 1210px;
     margin: auto;
     padding-top: 100px;
     padding-bottom: 100px;
 }
 
-.serv-list-1 li, .serv-list-2 li {
-  display: inline-block;
-    margin-left: 75px;
+.serv-list-1{
+    margin-bottom: 60px;
 }
 
+.serv-list-1 div, .serv-list-2 div {
+  display: inline-block;
+    margin-left: 75px;
+    text-align: center;
+}
 
+.serv-list-1 img, .serv-list-2 img{
+    padding-bottom: 30px;
+}
 
-.serv-list-1 li p, .serv-list-2 li p{
+.serv-list-1 p, .serv-list-2 p{
     font-size: 12px;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    padding-bottom: 20px;
 }
 
-.serv-list-1 li span, .serv-list-2 li span{
+.serv-list-1 span, .serv-list-2 span{
     line-height: 26px;
     color: #787878;
     font-family: 'Nunito Sans', sans-serif;
@@ -690,6 +695,80 @@ footer:after{
     content: "";
     clear: both;
     display: block;
+}
+
+.ui-dialog{
+    width: 100% !important;
+    max-width: 750px !important;
+}
+
+.ui-widget-header {
+    border: none;
+    background: black;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-top: 36px;
+    text-align: center;
+}
+
+
+
+
+.email-text p{
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 22px;
+    
+
+}
+.email-text{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 55px;
+    padding-bottom: 49px;
+}
+
+.email-form{
+
+    border: #b7b7b7 solid 1px;
+    border-radius: 1px;
+    font-size: 22px;
+    width: 368px;
+    
+}
+ .f-mw{
+     max-width: 530px;
+     margin: auto;
+ }
+.btn1-f{
+    width: 527px;
+    background-color: #d5d5d5;
+
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+
+.btn2-f{
+    margin-top: 32px;
+    width: 527px;
+    background-color: #557bcb;
+
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+
+.p-form{
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    
 }
 
 
